[package]
name = "beedle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.1"
actix-web = "4.4.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
once_cell = "1.19.0"
reqwest = { version = "0.11.22", features = ["json"] }